--- a/src/app/component/test-page/question/question.component.html
+++ b/src/app/component/test-page/question/question.component.html
@@ -1,4 +1,4 @@
-<div id="id-question-{{question.id}}" class="class-question" [ngClass]="setActiveBorder()">
+<div class="class-question" [ngClass]="setActiveBorder()">
   <div class="class-question-main">
     <p>{{question.id}}. </p>
     <p>{{question.body}}</p>
