--- a/src/app/component/result-analyze-page/result-analyze/result-analyze.component.html
+++ b/src/app/component/result-analyze-page/result-analyze/result-analyze.component.html
@@ -1,3 +1,12 @@
-<p>
-	{{result.name}}
-</p>
+<div>
+	<div id="visualization">
+
+	</div>
+
+	<div *ngFor="let question of questions" style="border: 1px solid black; margin: 5px; padding: 5px;">
+		<p style="margin-bottom: 10px !important">{{question.id}}. {{question.body}}</p>
+		<div *ngFor="let answer of question.answers">
+			<p [ngClass]="setAnswerColor(question, answer)">{{answer.body}}</p>
+		</div>
+	</div>
+</div>
