verzija za diplomski

--- a/src/app/component/login-page/login/login.component.html
+++ b/src/app/component/login-page/login/login.component.html
@@ -1,7 +1,7 @@
 
 <div id="id-login-page">
-  <h2>Welcome to best test</h2>
-  <h4>Enter your name</h4>
+  <h2>Добродошли на тест</h2>
+  <h4>Унесите име</h4>
 
   <form (ngSubmit)="onStart()">
     <input id="id-input-username" type="text" name="username" [(ngModel)]="username" />
