--- a/src/app/component/test-page/test/test.component.html
+++ b/src/app/component/test-page/test/test.component.html
@@ -16,7 +16,7 @@
   <!-- Header -->
   <div class="row">
     <div id="id-div-header" class="col-12">
-      <h1>Welcome {{username}}</h1>
+      <h1>Добродошли {{username}}</h1>
     </div>
   </div>
 
